[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^23.0.1"
install = "^1.3.5"
mediapipe-silicon = "^0.9.1"
# mediapipe = "^0.9.1.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
